# http_proxy_server

./: .gitignore  README  README.md  proj2.sln
include/: AddrInfo.h  HttpHeaderBuilder.h  HttpRequest.h  HttpUri.h  ListenConnection.h  ScopeGuard.h
proj1/: .Makefile.swp  .gitignore  Makefile  README  fingerclient  fingerclient.cpp  fingerserver  fingerserver.cpp  proj1.vcxproj  project1.tar  submit
proj2/: CMakeLists.txt  Makefile  Makefile-testing  README  notes.md  proj2.sln  proj2.vcxproj
proj2/include/: AddrInfo.h  ByteBuf.h  ClientConnection.h  ForwardSocketData.h  HttpHeaderBuilder.h  HttpRequest.h  HttpResponse.h  HttpUri.h  LineScanner.h  ListenConnection.h  helpers.h
proj2/include/gsl/: span
proj2/src/: AddrInfo.cpp  ByteBuf.cpp  CMakeLists.txt  ClientConnection.cpp  ForwardSocketData.cpp  HttpHeaderBuilder.cpp  HttpRequest.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h  HttpUri.cpp  LineScanner.cpp  ListenConnection.cpp  Makefile  README  fingerclient.cpp  fingerserver.cpp  helpers.cpp  helpers.h  log.txt  proj1.sln  proj2.vcxproj  proxy.cpp  test.cpp
project1-finger/: Makefile  README  fingerclient.cpp  fingerserver.cpp
src/: ClientConnection.cpp  ForwardSocketData.cpp  HttpRequest.cpp  HttpResponse.cpp  ListenConnection.cpp  helpers.cpp  proxy.cpp
tlpi-dist/: CMakeLists.txt
troubleshoot/: firefox-settings.txt
zach-project1/: fingerclient.cpp  fingerserver.cpp
